RT-144: Fix bug clipped email in Gmail

--- a/Web/ResellTicketSolution/WebAPI/EmailTemplate/TicketsTemplate.html
+++ b/Web/ResellTicketSolution/WebAPI/EmailTemplate/TicketsTemplate.html
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-</head>
-<body>
-    <tr class="item-row" style="border-bottom: 1px solid rgb(2, 119, 189);-webkit-box-sizing: border-box;box-sizing: border-box;page-break-inside: avoid;-webkit-transition: -webkit-transform .5s ease-out;transition: transform .5s ease-out,-webkit-transform .5s ease-out;-o-transition: transform .5s ease-out;display: block;position: relative;">
+﻿    <tr class="item-row" style="border-bottom: 1px solid rgb(2, 119, 189);-webkit-box-sizing: border-box;box-sizing: border-box;page-break-inside: avoid;-webkit-transition: -webkit-transform .5s ease-out;transition: transform .5s ease-out,-webkit-transform .5s ease-out;-o-transition: transform .5s ease-out;display: block;position: relative;">
         <td class="invoice-detail-margin" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding: 6px 0;vertical-align: top;border-top: 1px solid #dee2e6;border: none;padding-top: 8px;padding-bottom: 0;position: relative;/* padding-left: 20%; */white-space: normal;text-align: right;/* display: none; */width: 8px;max-width: 8px;background-color: #fff!important;"></td>
         <td data-label="Item #1" class="item-row-summary" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding: 6px 0;vertical-align: top;border-top: 1px solid #dee2e6;border: none;padding-top: 8px;/* padding-bottom: 0; */position: relative;padding-left: 3%;white-space: normal;/* display: block; */min-width: 180px;max-width: 180px;background-color: #fff!important;height: 59px;text-align: center;">
             <span class="item-row-name" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: block;">{ticketCode}</span><span class="item-row-description" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
@@ -24,5 +18,3 @@
         </td>
         <td class="invoice-detail-margin" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding: 6px 0;vertical-align: top;border-top: 1px solid #dee2e6;border: none;padding-top: 8px;padding-bottom: 0;position: relative;padding-left: 20%;white-space: normal;text-align: right;display: none;width: 8px;max-width: 8px;background-color: #fff!important;"></td>
     </tr>
-</body>
-</html>
