--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
@@ -71,7 +71,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="clearfix"> </div>
         </div>
     </div>
-
+    <div style="text-align: center;" id="no-result">
+            <h2>We're Sorry</h2>
+            <p>We can't seem to find any tickets that match your requirements</p>
+        </div>
     <!--content-->
     <div class="content-top" id="route-container">
     </div>
