RT-145: Fix Expired Date in route, Add constraint before buy route, post ticket

--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
@@ -33,6 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
     </style>
     <!-- js -->
+    <script src="/js/lib/pace.min.js"></script>
     <script src="https://js.stripe.com/v2/"></script>
     <script src="./../js/jquery-1.11.1.min.js"></script>
     <script src="./../js/jstarbox.js"></script>
@@ -52,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 appId: appConfig.OneSignalAppId,
                 subdomainName: appConfig.SubdomainName,
                 notifyButton: {
-                    enable: true,
+                    enable: false,
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
