empty page web cus

--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -106,6 +106,11 @@
     <div class="text-center margin-top-20" id="btnStatuses">
 
     </div>
+    <div id="show-empty-list" class="main-agileits" style="width: 60%; margin-top: 30px;display: none;">
+            <div 
+                style='text-align:center;background-image: url(/images/empty-list.png);height:450px;background-size: 100% 100%;'>
+            </div>
+        </div>
 
     <!--content-->
     <div class="content-top">
