--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="js/authen.js"></script>
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="/js/lib/pace.min.js"></script>
-	
+
 	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 	<script type="module">
 		import { appConfig } from './constant/appConfig.js';
@@ -84,7 +84,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div data-vide-bg="images/index-background.png">
 		<div class="container">
 			<div class="banner-info">
-				<h3 style="color: #795548; font-weight: 600;">It is a long established fact that a reader will be distracted by
+				<h3 style="color: #795548; font-weight: 600;">It is a long established fact that a reader will be
+					distracted by
 					the readable </h3>
 				<div class="search-form">
 					<input type="submit" value="Search Route" style="color: brown" id="btnSearchRoute">
@@ -101,6 +102,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 
 	<!--content-->
+	<div id="show-empty-list" class="main-agileits" style="width: 60%; margin-top: 30px;display: none;">
+		<div 
+			style='text-align:center;background-image: url(/images/empty-list.png);height:450px;background-size: 100% 100%;'>
+		</div>
+	</div>
 	<div class="content-top" id="route-container">
 	</div>
 
