RT-129: temporaty commit enhance search route

--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -15,7 +15,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="./../css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<link href="./../css/style.css" rel='stylesheet' type='text/css' />
 	<link href="./../css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="./../css/bootstrap-datetimepicker.css" />
+	<link rel="stylesheet" href="./../css/bootstrap-datetimepicker.css" />
+	<link rel="stylesheet" href="./../css/bootstrap-multiselect.css" type="text/css">
 	<!-- <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
 	<!-- <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" /> -->
@@ -29,7 +30,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript" src="./../js/moment.js"></script>
 	<script type="module" src="/js/top-bar.js"></script>
 	<script type="module" src="./searchRouteForm.js"></script>
-    <script src="./../js/bootstrap-datetimepicker.min.js"></script>
+	<script src="./../js/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript" src="./../js/bootstrap-multiselect.js"></script>
 	<!-- //js -->
 </head>
 
@@ -121,6 +123,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<option value="2">Maximum 2 tickets</option>
 											<option value="3" selected>Maximum 3 tickets</option>
 										</select>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-sm-3">Vehicles</label>
+									<div class="col-sm-9" id="vehicle-select">
 									</div>
 								</div>
 							</div>
