--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -81,33 +81,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <form autocomplete="off" class="form-horizontal">
                         <div class="row">
 							<div class="col-md-6">
-								<div class="form-group">
-									<label class="control-label col-sm-3">Departure</label>
-									<div class="col-sm-9" id="departureCityAutoSuggestContainer"></div>
+								<div class="form-group required">
+									<label class="control-label col-md-4">Departure</label>
+									<div class="col-md-8" id="departureCityAutoSuggestContainer"></div>
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="form-group">
-									<label class="control-label col-sm-3">Arrival</label>
-									<div class="col-sm-9" id="arrivalCityAutoSuggestContainer"></div>
+								<div class="form-group required">
+									<label class="control-label col-md-4">Arrival</label>
+									<div class="col-md-8" id="arrivalCityAutoSuggestContainer"></div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<div class="form-group">
-									<label class="control-label col-sm-3">Departure Date</label>
-									<div class="col-sm-9">
-										<input type="text" class="form-control" placeholder="Departure Date" id="departureDate"/>
+								<div class="form-group required">
+									<label class="control-label col-md-4">Departure Date</label>
+									<div class="col-md-8">
+										<input type="text" class="form-control" placeholder="Departure Date" id="departureDate" required/>
 									</div>	
 								</div>
 							</div>
 							
 							<div class="col-md-6">
-								<div class="form-group">
-									<label class="control-label col-sm-3">Arrival Date</label>
-									<div class="col-sm-9">
-										<input type="text" class="form-control" placeholder="Arrival Date" id="arrivalDate"/>
+								<div class="form-group required">
+									<label class="control-label col-md-4">Arrival Date</label>
+									<div class="col-md-8">
+										<input type="text" class="form-control" placeholder="Arrival Date" id="arrivalDate" required/>
 									</div>	
 								</div>
 							</div>
@@ -116,8 +116,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<label class="control-label col-sm-3">Max Tickets</label>
-									<div class="col-sm-9">
+									<label class="control-label col-md-4">Max Tickets</label>
+									<div class="col-md-8">
 										<select class="form-control" id="maxTicketSelect">
 											<option value="1">Only 1 ticket</option>
 											<option value="2">Maximum 2 tickets</option>
@@ -128,8 +128,36 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-									<label class="control-label col-sm-3">Vehicles</label>
-									<div class="col-sm-9" id="vehicle-select">
+									<label class="control-label col-md-4">Max Waiting Hours</label>
+									<div class="col-md-8">
+										<input class="form-control" type="number" id="maxWaitingHourInput" value="5"/>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-md-4">Vehicles</label>
+									<div class="col-md-8" id="vehicle-select">
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-md-4">Transportation</label>
+									<div class="col-md-8" id="transportation-select">
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-md-4">Ticket Type</label>
+									<div class="col-md-8" id="ticket-type-select">
 									</div>
 								</div>
 							</div>
