--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -30,6 +30,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script src="./../js/numeral.min.js"></script>
 	<script type="module" src="./routeDetail.js"></script>
 	<script type="module" src="/js/top-bar.js"></script>
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+
+    <script type="module">
+        import { appConfig } from './../constant/appConfig.js';
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function () {
+            OneSignal.init({
+                appId: appConfig.OneSignalAppId,
+                subdomainName: appConfig.SubdomainName,
+                notifyButton: {
+                    enable: true,
+                }
+            });
+            OneSignal.on('notificationDisplay', function (event) {
+                alert(event.content);
+                //console.log(event);
+            });
+        });
+    </script>
 	<!-- //js -->
 </head>
 
