RT-164: Enhance status of tickets in front end

--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -158,7 +158,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-4 col-md-4">
-                                <label>Departure Date:</label>
+                                <label>Departure Date</label>
                                 <input type="text" placeholder="Departure Date" id="departureDate"
                                     class="form-control" />
                                 <!-- onblur="setDepartureDate()" -->
@@ -166,37 +166,37 @@
                         </div>
                         <div class="row" style="margin-top: 30px">
                             <div class="col-sm-4 col-md-4">
-                                <label>Arrival City:</label>
+                                <label>Arrival City</label>
                                 <div class="autocomplete" id="arrivalCity">
                                 </div>
                             </div>
                             <div class="col-sm-4 col-md-4">
-                                <label>Arrival Station:</label>
+                                <label>Arrival Station</label>
                                 <div class="autocomplete" id="arrivalStation">
                                 </div>
                             </div>
-                            <div class="col-sm-4 col-md-4">
-                                <label>Arrival Date:</label>
+                            <div class="col-sm-4 col-md-4" id="arrivalDateContainer">
+                                <label>Arrival Date</label>
                                 <input type="text" placeholder="Arrival Date" id="arrivalDate" class="form-control"
                                     disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 30px">
                             <div class="col-sm-6 col-md-3">
-                                <label>Ticket Code:</label>
+                                <label>Ticket Code</label>
                                 <input type="text" placeholder="Ticket Code" id="ticketCode" class="form-control" />
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <label>Passenger Name:</label>
+                                <label>Passenger Name</label>
                                 <input type="text" placeholder="Passenger Name" id="passengerName"
                                     class="form-control" />
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <label>Email Booking:</label>
+                                <label>Email Booking</label>
                                 <input type="text" placeholder="Email Booking" id="emailBooking" class="form-control" />
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <label>Selling Price:</label>
+                                <label>Selling Price</label>
                                 <input type="text" placeholder="Selling Price" id="sellingPrice" class="form-control" />
                             </div>
 
