--- a/Web/ResellTicketSolution/WebClient.Customer/checkPhoneNo.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/checkPhoneNo.html
@@ -8,8 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-	<title>Big store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Register ::
-		w3layouts</title>
+	<title>Check Phone Number</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -38,6 +37,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	</script>
 	<!-- start-smoth-scrolling -->
 	<link href="css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="js/registerPhone/build/css/intlTelInput.css">
+	<link rel="stylesheet" href="js/registerPhone/build/css/demo.css">
+	<script src="js/registerPhone/build/js/intlTelInput.min.js"></script>
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="js/registerPhone/build/js/intlTelInput-jquery.min.js"></script>
 	<link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 	<!--- start-rate---->
@@ -77,6 +81,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			padding: 10px 25px;
 			max-width: 400px;
 		}
+
 		#form-messages-exis {
 			background-color: rgb(255, 232, 232);
 			border: 2px solid red;
@@ -88,6 +93,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			padding: 10px 25px;
 			max-width: 400px;
 		}
+
 		::placeholder {
 			color: #999;
 			opacity: 1;
@@ -109,7 +115,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="module" src="/js/top-bar.js"></script>
 </head>
 
-<body>
+<body style="margin: 0px;">
 	<div class="header">
 
 		<div class="container">
@@ -156,12 +162,14 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			var txtPhoneNumber = document.getElementsByName("txtPhoneNumber")[0].value;
 			var alertInvalid = document.getElementById("form-messages");
 			var alertExisted = document.getElementById("form-messages-exis");
+			txtPhoneNumber = txtPhoneNumber.replace('+840', '84');
+			txtPhoneNumber = txtPhoneNumber.replace('+', '');
 			var data = {
 				phoneNumber: txtPhoneNumber
 			}
-
+			console.log("Phone: ", data.phoneNumber)
 			var mobilePattern = /^[0-9]{10,15}$/;
-			if (!mobilePattern.test(txtPhoneNumber)) {
+			if (!mobilePattern.test(data.phoneNumber)) {
 				alertExisted.style.display = 'none';
 				alertInvalid.style.display = 'block';
 			} else {
@@ -199,12 +207,16 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<span>This Phone Number is already existed!!</span>
 					</ul>
 					<label>Phone Number:</label>
-					<div class="key">
-						<i class="fa fa-phone" aria-hidden="true"></i>
-						<input type="text" placeholder="Phone number" name="txtPhoneNumber" required>
+					<br>
+						<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
+						<input type="tel" style="width:170%" placeholder="Phone number" id="phone" name="txtPhoneNumber" required>
 						<div class="clearfix"></div>
-					</div>
-					<button type="button" onclick="checkPhoneNumber()" class="btn btn-large btn-block btn-warning">Send OTP</button>
+					<br>
+					<p align="center">
+						<button type="button" onclick="checkPhoneNumber()" class="btn btn-large btn-warning">Send
+							OTP</button>
+					</p>
+
 				</form>
 			</div>
 
@@ -249,16 +261,43 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //footer-->
 	<!-- smooth scrolling -->
 	<script type="text/javascript">
-		$(document).ready(function () {
-			/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-			*/
-			$().UItoTop({ easingType: 'easeOutQuart' });
+		// $(document).ready(function () {
+		// 	/*
+		// 		var defaults = {
+		// 		containerID: 'toTop', // fading element id
+		// 		containerHoverID: 'toTopHover', // fading element hover id
+		// 		scrollSpeed: 1200,
+		// 		easingType: 'linear' 
+		// 		};
+		// 	*/
+		// 	$().UItoTop({ easingType: 'easeOutQuart' });
+		// });
+	</script>
+	<script src="js/registerPhone/build/js/intlTelInput.js"></script>
+	<script>
+		var input = document.querySelector("#phone");
+		window.intlTelInput(input, {
+			allowDropdown: true,
+			autoHideDialCode: false,
+			// autoPlaceholder: "off",
+			// dropdownContainer: document.body,
+			// excludeCountries: ["us"],
+			formatOnDisplay: true,
+			// geoIpLookup: function(callback) {
+			//   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+			//     var countryCode = (resp && resp.country) ? resp.country : "";
+			//     callback(countryCode);
+			//   });
+			// },
+			// hiddenInput: "full_number",
+			initialCountry: "vn",
+			// localizedCountries: { 'de': 'Deutschland' },
+			nationalMode: false,
+			// onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+			// placeholderNumberType: "MOBILE",
+			preferredCountries: ['vn', 'us'],
+			separateDialCode: false,
+			utilsScript: "js/registerPhone/build/js/utils.js",
 		});
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
@@ -266,47 +305,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
 	<script src="/js/lib/pace.min.js"></script>
-	<!-- //for bootstrap working -->
-	<script type='text/javascript' src="js/jquery.mycart.js"></script>
-	<script type="text/javascript">
-		$(function () {
-
-			var goToCartIcon = function ($addTocartBtn) {
-				var $cartIcon = $(".my-cart-icon");
-				var $image = $('<img width="30px" height="30px" src="' + $addTocartBtn.data("image") + '"/>').css({ "position": "fixed", "z-index": "999" });
-				$addTocartBtn.prepend($image);
-				var position = $cartIcon.position();
-				$image.animate({
-					top: position.top,
-					left: position.left
-				}, 500, "linear", function () {
-					$image.remove();
-				});
-			}
-
-			$('.my-cart-btn').myCart({
-				classCartIcon: 'my-cart-icon',
-				classCartBadge: 'my-cart-badge',
-				affixCartIcon: true,
-				checkoutCart: function (products) {
-					$.each(products, function () {
-						console.log(this);
-					});
-				},
-				clickOnAddToCart: function ($addTocart) {
-					goToCartIcon($addTocart);
-				},
-				getDiscountPrice: function (products) {
-					var total = 0;
-					$.each(products, function () {
-						total += this.quantity * this.price;
-					});
-					return total * 1;
-				}
-			});
-
-		});
-	</script>
+	
 
 </body>
 
