RT: Enhance phone number input

--- a/Web/ResellTicketSolution/WebClient.Customer/checkPhoneNo.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/checkPhoneNo.html
@@ -40,7 +40,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<link rel="stylesheet" href="js/registerPhone/build/css/intlTelInput.css">
 	<link rel="stylesheet" href="js/registerPhone/build/css/demo.css">
 	<script src="js/registerPhone/build/js/intlTelInput.min.js"></script>
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
 	<script src="js/registerPhone/build/js/intlTelInput-jquery.min.js"></script>
 	<link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -209,7 +209,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<label>Phone Number:</label>
 					<br>
 						<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
-						<input type="tel" style="width:170%" placeholder="Phone number" id="phone" name="txtPhoneNumber" required>
+						<input type="tel" style="width:100%" placeholder="Phone number" id="phone" name="txtPhoneNumber" required>
 						<div class="clearfix"></div>
 					<br>
 					<p align="center">
