RT-177: Allow annonymous search route

--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
@@ -33,7 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //js -->
 </head>
 
-<body onload="checkLoginProfile();">
+<body>
 
     <div class="header">
         <div class="container">
