--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -69,6 +69,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</style>
 	<script type="text/javascript" src="/js/moment.js"></script>
 	<script type="module" src="/js/top-bar.js"></script>
+	<script type="module" src="/js/receive-toast-message-handler.js"></script>
 </head>
 
 <body>
