fix bug register mobile + add select country phone (web, mmobile)

--- a/Web/ResellTicketSolution/WebClient.Customer/ForgotPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ForgotPassword.html
@@ -37,6 +37,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		});
 	</script>
 	<!-- start-smoth-scrolling -->
+	<link rel="stylesheet" href="js/registerPhone/build/css/intlTelInput.css">
+	<link rel="stylesheet" href="js/registerPhone/build/css/demo.css">
+	<script src="js/registerPhone/build/js/intlTelInput.min.js"></script>
+	<script src="js/registerPhone/build/js/intlTelInput-jquery.min.js"></script>
 	<link href="css/font-awesome.css" rel="stylesheet">
 	<link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -99,7 +103,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="module" src="/js/top-bar.js"></script>
 </head>
 
-<body>
+<body style="margin: 0px;">
 	<div class="header">
 
 		<div class="container">
@@ -123,7 +127,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								aria-hidden="true"></i><span></span></a></li>
 				</ul>
 			</div>
-			
+
 			<div class="nav-top" id="nav-bar-container">
 			</div>
 
@@ -144,6 +148,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="text/javascript">
 		function checkValidPhone() {
 			var txtPhone = document.getElementsByName("txtPhone")[0].value;
+			txtPhone = txtPhone.replace('+840', '84');
+			txtPhone = txtPhone.replace('+', '');
 			var mobilePattern = /^[0-9]{10,15}$/;
 			var aletForm = document.getElementById("form-messages");
 			var alertText = document.getElementById("alert-text");
@@ -161,6 +167,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			var txtPhone = document.getElementsByName("txtPhone")[0].value;
 			var aletForm = document.getElementById("form-messages");
 			var alertText = document.getElementById("alert-text");
+			txtPhone = txtPhone.replace('+840', '84');
+			txtPhone = txtPhone.replace('+', '');
 			if (checkValidPhone()) {
 				var data = {
 					phoneNumber: txtPhone
@@ -177,7 +185,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					alertText.textContent = "Phone number is not existed!!!";
 					aletForm.style.display = 'block';
 				} else {
-					localStorage.setItem('PHONENUMBER', txtPhone);
+					localStorage.setItem('PHONENUMBER', data.phoneNumber);
 					window.location.href = 'ResetPassword.html';
 				}
 			}
@@ -190,21 +198,53 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h3>Forgot Password</h3>
 				<form>
 					<label>Phone Number:</label>
-					<div class="key">
-						<i class="fa fa-phone" aria-hidden="true"></i>
-						<input type="text" placeholder="Phone" name="txtPhone">
-						<div class="clearfix"></div>
-					</div>
+					<br>
+					<!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
+					<input type="tel" style="width:170%" placeholder="Phone number" id="phone" name="txtPhone" required>
+					<div class="clearfix"></div>
+					<br>
+					<p align="center">
+						<button type="button" onclick="sendOTP()" class="btn btn-large btn-warning">Send
+							OTP</button>
+					</p>
+					<br>
 					<ul id="form-messages">
 						<span id="alert-text"></span>
 					</ul>
-					<button type="button" onclick="sendOTP()" class="btn btn-large btn-block btn-warning">Send
-						OTP</button>
+					<br>
+
 				</form>
 			</div>
 
 		</div>
 	</div>
+	<script src="js/registerPhone/build/js/intlTelInput.js"></script>
+	<script>
+		var input = document.querySelector("#phone");
+		window.intlTelInput(input, {
+			allowDropdown: true,
+			autoHideDialCode: false,
+			// autoPlaceholder: "off",
+			// dropdownContainer: document.body,
+			// excludeCountries: ["us"],
+			formatOnDisplay: true,
+			// geoIpLookup: function(callback) {
+			//   $.get("http://ipinfo.io", function() {}, "jsonp").always(function(resp) {
+			//     var countryCode = (resp && resp.country) ? resp.country : "";
+			//     callback(countryCode);
+			//   });
+			// },
+			// hiddenInput: "full_number",
+			initialCountry: "vn",
+			// localizedCountries: { 'de': 'Deutschland' },
+			nationalMode: false,
+			// onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
+			// placeholderNumberType: "MOBILE",
+			preferredCountries: ['vn', 'us'],
+			separateDialCode: false,
+			utilsScript: "js/registerPhone/build/js/utils.js",
+		});
+	</script>
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
