--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -287,7 +287,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<label>OTP Code:</label>
 					<div class="key">
 						<i class="fa fa-pinterest-p" aria-hidden="true"></i>
-						<input type="text" placeholder="OPTCode" name="txtOPTCode">
+						<input type="text" placeholder="OTPCode" name="txtOPTCode">
 						<div class="clearfix"></div>
 					</div>
 					<div id="otp-alert" style="display: none" class="alert alert-danger" role="alert">
