--- a/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
@@ -188,7 +188,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <form>
                     <label>Current Password:</label>
                     <div class="key">
-                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                        <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" placeholder="Current Password" name="txtCurrentPassword">
                         <div class="clearfix"></div>
                     </div>
