Fix bug: login, change password in web

--- a/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
@@ -39,27 +39,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript" src="js/authen.js"></script>
     <script type="text/javascript" src="constant/BasrUrl.js"></script>
     <script src="js/bootstrap.js"></script>
-	<script src="/js/lib/pace.min.js"></script>
-	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-	<script type="module">
-		import {appConfig} from './constant/appConfig.js';
-		var OneSignal = window.OneSignal || [];
-		OneSignal.push(function () {
-			OneSignal.init({
-				appId: appConfig.OneSignalAppId,
-				subdomainName: appConfig.SubdomainName,
-				notifyButton: {
-					enable: true,
-				}
-			});
-			OneSignal.on('notificationDisplay', function (event) {
-				alert(event.content);
-				//console.log(event);
-			});
-		});
-	</script>
-	<script type="text/javascript" src="/js/moment.js"></script>
-	<script type="module" src="/js/top-bar.js"></script>
+    <script src="/js/lib/pace.min.js"></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script type="module">
+        import { appConfig } from './constant/appConfig.js';
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function () {
+            OneSignal.init({
+                appId: appConfig.OneSignalAppId,
+                subdomainName: appConfig.SubdomainName,
+                notifyButton: {
+                    enable: true,
+                }
+            });
+            OneSignal.on('notificationDisplay', function (event) {
+                alert(event.content);
+                //console.log(event);
+            });
+        });
+    </script>
+    <script type="text/javascript" src="/js/moment.js"></script>
+    <script type="module" src="/js/top-bar.js"></script>
 </head>
 
 <body onload="checkLoginProfile();">
@@ -87,8 +87,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </ul>
             </div>
 
-			<div class="nav-top" id="nav-bar-container">
-			</div>
+            <div class="nav-top" id="nav-bar-container">
+            </div>
 
         </div>
     </div>
@@ -152,6 +152,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             var txtCurrentPassword = document.getElementsByName("txtCurrentPassword")[0].value;
             var successAlert = document.getElementById("success-alert");
             var alertInvalid = document.getElementById("register-alert");
+            const token = localStorage.getItem('TOKEN');
             const data = {
                 username: username,
                 passwordHash: txtCurrentPassword,
@@ -163,16 +164,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     method: "PUT",
                     headers: {
                         'Accept': 'application/json',
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`,
                     },
                     body: JSON.stringify(data)
                 });
-                if (respone.status === 406 || respone.status === 400) {
-                    alertInvalid.style.display = 'block';
-                    successAlert.style.display = 'none';
-                } else {
+                console.log("thanh bug: ", respone);
+                if (respone.status === 200) {
                     successAlert.style.display = 'block';
                     alertInvalid.style.display = 'none';
+
+                } else {
+                    alertInvalid.style.display = 'block';
+                    successAlert.style.display = 'none';
                     //window.location.href = 'login.html';
                 }
             } else {
@@ -263,7 +267,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <!-- //footer-->
-    
+
 </body>
 
 </html>
