RT-196:  Fix labels for input in web admin add concurrency when customer edit ticket and when staff verify new ticket. register: ký tự đầu tiên của username ko dc là số manager - dashboard: just get tickets that are renamed success

--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -145,7 +145,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 		function checkValidUsername() {
 			var txtUsername = document.getElementsByName("txtUsername")[0].value;
-			var patt = /^[a-zA-Z0-9]{6,30}$/;
+			var patt = /^[a-zA-Z][a-zA-Z0-9]{3,30}$/;
 			var usernameAlert = document.getElementById("username-alert");
 			if (patt.test(txtUsername)) {
 				usernameAlert.style.display = 'none';
@@ -262,7 +262,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="clearfix"></div>
 					</div>
 					<div id="username-alert" style="display: none" class="alert alert-danger" role="alert">
-						Username must have 6 - 30 digits!!
+						Username must have 3 - 30 characters and first character is not a digit!!
 					</div>
 
 					<label>Full Name:</label>
@@ -272,7 +272,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="clearfix"></div>
 					</div>
 					<div id="fullname-alert" style="display: none" class="alert alert-danger" role="alert">
-						Full name must have 6 - 100 digits!!
+						Full name must have 6 - 100 characters!!
 					</div>
 
 					<label>Email:</label>
