Random OTP + fix layout transaction

--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -251,8 +251,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div id="success-alert" style="display: none" class="alert alert-success" role="alert">
                         Update Profile success !!
                     </div>
-                    <button type="button" onclick="updateProfile()" class="btn btn-large btn-block btn-warning">Update
+                    <button type="button" onclick="updateProfile()" style="margin-bottom: 8px;" class="btn btn-large btn-block btn-warning">Update
                         Profile</button>
+                    
                     <a href="changePasswordProfile.html" style="text-decoration: none;">
                         <input type="button" class="btn btn-large btn-block btn-warning" value="Change Password" />
                     </a>
