RT-204: Add sort by in customer website

--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -181,6 +181,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 								</div>
 							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-md-4">Sort by</label>
+									<div class="col-md-8">
+										<select class="form-control" id="orderBySelect">
+											<option value="1" selected>Total Price Low to High</option>
+											<option value="2">Total Traveling time Low to High</option>
+											<option value="3">Arrival Time early to late</option>
+										</select>
+									</div>
+								</div>
+							</div>
 						</div>
 
 						<div class="row">
